--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Publish .NET Core Project
         run: dotnet publish Conway.BlazorClient -c Release -o release --nologo
       
-      # changes the base-tag in index.html from '/' to 'bankomat' to match GitHub Pages repository subdirectory
-      - name: Change base-tag in index.html from / to bankomat
-        run: sed -i 's/<base href="\/" \/>/<base href="\/Conway.Blazor\/" \/>/g' release/wwwroot/index.html
+      # changes the base-tag in index.html from '/' to 'conway.blazor' to match GitHub Pages repository subdirectory
+      - name: Change base-tag in index.html from / to conway.blazor
+        run: sed -i 's/<base href="\/" \/>/<base href="\/conway.blazor\/" \/>/g' release/wwwroot/index.html
         
       # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
       - name: Add .nojekyll file
