--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,9 @@ jobs:
          
       # commit to GitHub Pages
       - name: Commit wwwroot to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.4.0
+        uses: JamesIves/github-pages-deploy-action@v4.4.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GIT_REPO_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           BRANCH: gh-pages
           FOLDER: release/wwwroot
       
