--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
         
       # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
-        run: dotnet publish Conway.BlazorClient -c Release -o release --nologo
+        run: |
+          - dotnet workload install wasm-tools
+          - dotnet publish Conway.BlazorClient -c Release -o release --nologo
       
       # changes the base-tag in index.html from '/' to 'conway.blazor' to match GitHub Pages repository subdirectory
       - name: Change base-tag in index.html from / to conway.blazor
