--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       # publishes Blazor project to the release-folder
       - name: Publish .NET Core Project
         run: |
-          - dotnet workload install wasm-tools
-          - dotnet publish Conway.BlazorClient -c Release -o release --nologo
+          dotnet workload install wasm-tools
+          dotnet publish Conway.BlazorClient -c Release -o release --nologo
       
       # changes the base-tag in index.html from '/' to 'conway.blazor' to match GitHub Pages repository subdirectory
       - name: Change base-tag in index.html from / to conway.blazor
